# tabffy

./: CONTEXT.md  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.app.json
.github/workflows/: build.yml
docs/adr/: 0001-tauri-as-desktop-framework.md  0002-sqlx-for-postgresql.md  0003-hybrid-storage-sqlite-json.md
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs  state.rs  storage.rs
src-tauri/src/commands/: connection.rs  history.rs  mod.rs  query.rs  tabs.rs
src-tauri/src/db/: driver.rs  mod.rs  postgres_driver.rs  split.rs  sqlite_driver.rs
src/components/: AddConnectionModal.tsx  EditorArea.tsx  ErrorBoundary.tsx  SaveQueryModal.tsx  SettingsModal.tsx  Sidebar.tsx
src/contexts/: SettingsContext.tsx  ToastContext.tsx
